<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FruitletActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fruitlet_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fruitlet_treesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_toolbar"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:text="Trees PH" />

    <Button
        android:id="@+id/fruitlet_btnLeft"
        android:layout_width="35dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_toolbar"
        app:layout_constraintStart_toEndOf="@id/fruitlet_treesCount"
        android:layout_marginLeft="50dp"
        android:text="L"
        android:textSize="7dp"/>

    <TextView
        android:id="@+id/fruitlet_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_toolbar"
        app:layout_constraintStart_toEndOf="@id/fruitlet_btnLeft"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:text="Date PH" />

    <Button
        android:id="@+id/fruitlet_btnRight"
        android:layout_width="35dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_toolbar"
        app:layout_constraintStart_toEndOf="@id/fruitlet_date"
        android:layout_marginLeft="10dp"
        android:text="R" />

    <TextView
        android:id="@+id/fruitlet_S"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_toolbar"
        app:layout_constraintStart_toEndOf="@id/fruitlet_btnRight"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:text="S PH" />

    <!-- Columns for ListView -->
    <TextView
        android:id="@+id/fruitlet_columnTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_treesCount"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:text="@string/fruitlet_columnTree" />

    <TextView
        android:id="@+id/fruitlet_columnCluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_treesCount"
        app:layout_constraintStart_toEndOf="@id/fruitlet_columnTree"
        android:layout_marginLeft="10dp"
        android:text="@string/fruitlet_columnCluster" />

    <TextView
        android:id="@+id/fruitlet_columnFruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_treesCount"
        app:layout_constraintStart_toEndOf="@id/fruitlet_columnCluster"
        android:layout_marginLeft="10dp"
        android:text="@string/fruitlet_columnFruit" />

    <TextView
        android:id="@+id/fruitlet_columnSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_treesCount"
        app:layout_constraintStart_toEndOf="@id/fruitlet_columnFruit"
        android:layout_marginLeft="90dp"
        android:text="@string/fruitlet_columnSize" />

    <ListView
        android:id="@+id/fruitlet_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_columnTree"/>

    <EditText
        android:id="@+id/testEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fruitlet_listView" />

    <com.example.fruitgrowth.FruitletInputActivity
        android:id="@+id/fruitletKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/testEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>